--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
   "description": "",
   "devDependencies": {
     "@types/compression": "^1.8.1",
+    "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
-    "@types/node": "^24.6.2",
-    "@types/pg": "^8.15.5",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
+    "@types/node": "^24.6.2",
     "@types/nodemailer": "^7.0.2",
+    "@types/pg": "^8.15.5",
     "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.10",
     "tsx": "^4.20.6",
@@ -33,17 +35,24 @@
   },
   "dependencies": {
     "aws-sdk": "^2.1692.0",
+    "bcryptjs": "^3.0.2",
     "better-auth": "^1.3.25",
     "compression": "^1.8.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-rate-limit": "^8.1.0",
+    "form-data": "^4.0.4",
     "helmet": "^8.1.0",
+    "http-status-codes": "^2.3.0",
+    "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
+    "mailgun.js": "^12.1.1",
     "multer": "^2.0.2",
     "pg": "^8.16.3",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "zod": "^4.1.12",
+    "zod-validation-error": "^4.0.2"
   }
 }
-
