modified auhmiddleware to reject unverified users and get profile api

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,10 @@
     "outDir": "./dist",
     "declaration": false, 
     "sourceMap": true,
-    "noUncheckedIndexedAccess": true
+    "noUncheckedIndexedAccess": true,
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
   "include": ["src/**/*"]
 }
