--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.925.0",
+    "@aws-sdk/s3-request-presigner": "^3.925.0",
     "aws-sdk": "^2.1692.0",
     "bcryptjs": "^3.0.2",
     "better-auth": "^1.3.25",
