--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "node dist/server.js",
-    "dev": "nodemon --exec tsx src/server.ts",
+    "dev": "nodemon --watch src --ext ts,tsx --exec tsx src/server.ts",
     "build": "tsc",
     "knex:run": "npx tsx ./node_modules/.bin/knex --knexfile src/knexfile.ts",
     "migrate:make": "npm run knex:run migrate:make",
@@ -28,6 +28,7 @@
     "@types/node": "^24.6.2",
     "@types/nodemailer": "^7.0.2",
     "@types/pg": "^8.15.5",
+    "@types/react": "^19.2.5",
     "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.10",
     "tsx": "^4.20.6",
@@ -36,6 +37,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.925.0",
     "@aws-sdk/s3-request-presigner": "^3.925.0",
+    "@react-pdf/renderer": "^4.3.1",
     "aws-sdk": "^2.1692.0",
     "bcryptjs": "^3.0.2",
     "better-auth": "^1.3.25",
