--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "mailgun.js": "^12.1.1",
     "multer": "^2.0.2",
     "pg": "^8.16.3",
+    "react": "^19.2.0",
     "uuid": "^13.0.0",
     "zod": "^4.1.12",
     "zod-validation-error": "^4.0.2"
